static/themes/default/theme.css
.kiwi-wrap {
    color: #2c3e50;
    --kiwi-nick-brightness: 40;
}

.kiwi-workspace:before {
    /* The top bar at the top of the startup page */
    background: -webkit-linear-gradient(left, #BDDE6B 0%,#BDDE6B 20%, #7DBD67 20%, #7DBD67 40%,#ECED77 40%,#ECED77 60%,#F6C358 60%,#F6C358 80%,#F66B58 80%) 0 0 no-repeat;
}

.kiwi-workspace-background {
    background: #fff;
}

.u-link {
    color: #42b983;
}
.u-button {
    color: #2c3e50;
    border-radius: 3px;
    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
    vertical-align: middle;
    text-align: center;
    outline: none;
}
.u-button:hover {
    opacity: 0.75;
}
.u-button-primary {
    background-color: #86b32d;
    border: none;
    border-bottom: 1px solid #5d7d1f;
    color: #fff;
}
.u-button-secondary {
    background: rgba(117, 117, 117, 0.07);
    border-bottom: 1px solid rgba(117, 117, 117, 0.2);
}
.u-button-warning {
    background-color: #ca3c3c;
    border-bottom: 1px solid #5f1515;
    color: #fff4f4;
}

.input-text {
    background: #fff;
}
.input-text-label {
    color: gray;
}
.input-text--focus {
    border-color: #42b983;
}
.input-text-underline {
    border-color: #a9a9a9;
}
.input-text-underline-active {
    background: #42b983;
}

.u-form .u-input,
.u-form textarea {
    border: 1px solid #cccccc;
    border-bottom: 2px solid #42b983;
    background: #ffffff;
    outline-color: #42b983;
}

.u-tabbed-view-tabs {
    border-bottom: 1px solid #ddd;
}
.u-tabbed-view-tab {
    border-color: #42b983;
    transition: border-width 0.1s;
    font-weight: bold;
}

.irc-fg-colour-white { color: #FFFFFF; }
.irc-fg-colour-black { color: #000000; }
.irc-fg-colour-blue { color: #000080; }
.irc-fg-colour-green { color: #008000; }
.irc-fg-colour-light-red { color: #FF0000; }
.irc-fg-colour-brown { color: #800040; }
.irc-fg-colour-purple { color: #800080; }
.irc-fg-colour-orange { color: #FF8040; }
.irc-fg-colour-yellow { color: #FFFF00; }
.irc-fg-colour-light-green { color: #80FF00; }
.irc-fg-colour-cyan { color: #008080; }
.irc-fg-colour-light-cyan { color: #00FFFF; }
.irc-fg-colour-light-blue { color: #0000FF; }
.irc-fg-colour-pink { color: #FF55FF; }
.irc-fg-colour-grey { color: #808080; }
.irc-fg-colour-light-grey { color: #C0C0C0; }

.irc-bg-colour-white { background-color: #FFFFFF; }
.irc-bg-colour-black { background-color: #000000; }
.irc-bg-colour-blue { background-color: #000080; }
.irc-bg-colour-green { background-color: #008000; }
.irc-bg-colour-light-red { background-color: #FF0000; }
.irc-bg-colour-brown { background-color: #800040; }
.irc-bg-colour-purple { background-color: #800080; }
.irc-bg-colour-orange { background-color: #FF8040; }
.irc-bg-colour-yellow { background-color: #FFFF00; }
.irc-bg-colour-light-green { background-color: #80FF00; }
.irc-bg-colour-cyan { background-color: #008080; }
.irc-bg-colour-light-cyan { background-color: #00FFFF; }
.irc-bg-colour-light-blue { background-color: #0000FF; }
.irc-bg-colour-pink { background-color: #FF55FF; }
.irc-bg-colour-grey { background-color: #808080; }
.irc-bg-colour-light-grey { background-color: #C0C0C0; }




/**
 * State browser
 */

.kiwi-statebrowser {
    background: #2a2c23;
    /* this also looks cool, background: #05394a; */
    color: #e0e0e0;
}

.kiwi-statebrowser-divider {
    background: rgba(255,255,255,0.3);
    margin: 8px 12px;
    height: 1px;
}

.kiwi-statebrowser-availablenetworks {
    border-bottom: 1px solid rgba(255,255,255,0.3);
}
.kiwi-statebrowser-availablenetworks-toggle {
    background: rgba(255,255,255,0.15);
}
.kiwi-statebrowser-availablenetworks-link {
    border-right: 15px solid red;
}
.kiwi-statebrowser-availablenetworks-link--connected {
    border-color: green;
}

.kiwi-statebrowser-channel-notjoined .kiwi-statebrowser-channel-name {
    color: #d03232;
}
.kiwi-statebrowser-channel-active .kiwi-statebrowser-channel-name {
    color: #df6b26;
}

.kiwi-statebrowser-channel-label {
    background: green;
    color: #dedede;
}
.kiwi-statebrowser-channel-label--highlight {
    background: #d62323;
}

.kiwi-statebrowser-channel-label-transition-enter-active, .kiwi-statebrowser-channel-label-transition-leave-active {
    transition: opacity 0.1s;
}
.kiwi-statebrowser-channel-label-transition-enter, .kiwi-statebrowser-channel-label-transition-leave-active {
    opacity: 0;
}

.kiwi-statebrowser-channel-popup {
    background: #383838;
    border: 3px solid #6b6b6b;
    border-left: none;
}

.kiwi-statebrowser-newchannel-inputwrap {
    border-radius: 3px;
    background: #fff;
    position: relative;
    opacity: 0.8;
    transition: opacity 0.3s;
}
.kiwi-statebrowser-newchannel-inputwrap--focus {
    opacity: 1;
}

.kiwi-statebrowser-options {
    background: #383838;
}




/**
 * Container (Nicklist / header / control input wrapper)
 */

.kiwi-container {
    border-bottom: 1px solid #dddddd;
}

.kiwi-container-toggledraw-statebrowser,
.kiwi-container-toggledraw-sidebar {
    background: #fff;
    border-bottom: 1px solid #dddddd;
}
.kiwi-container-toggledraw-statebrowser {
    border-right: 1px solid #dddddd;
}
.kiwi-container-toggledraw-sidebar {
    border-left: 1px solid #dddddd;
}
.kiwi-container-toggledraw-sidebar--disabled {
    color: #b8babd;
}



/**
 * Sidebar
 */

.kiwi-sidebar {
    background-color: #fff;
    border-left: 1px solid #dddddd;
}



/**
 * Nicklist
 */

.kiwi-nicklist-info {
    border-color: #ddd;
}



/**
 * Buffer header (channel name + topic)
 */

.kiwi-header {
    border-bottom: 1px solid #dddddd;
    background: #fff;
}
.kiwi-header-topic {
    color: #5f5f5f;
}

.kiwi-header-buffersettings {
    border-top: 1px solid #dddddd;
}




/**
 * Control input
 */

.kiwi-controlinput {
}
.kiwi-controlinput-inner {
}
.kiwi-controlinput-user {
    border-right: 1px solid #dddddd;
}
.kiwi-controlinput-input-wrap {
    background: #fff;
}



/**
 * Control input (the bottom bar)
 */

.kiwi-autocomplete {
    box-shadow: 0 1px 15px rgba(64, 54, 63, 0.25);
    border: 1px solid #CCC;
    background: #eee;
}
.kiwi-autocomplete-item {
    border-bottom: 1px solid #CCC;
}
.kiwi-autocomplete-item--selected {
    background: #D1EACD;
}



/**
 * Message list
 */

.kiwi-messagelist-message {
    border-top: 1px solid #f7f5f5;
    /* some message highlights add a left border so add a default invisble one to keep them inline */
    border-left: 3px solid transparent;
}
.kiwi-messagelist-message--modern {
    border-left: 7px solid transparent;
}
.kiwi-messagelist-message--modern.kiwi-messagelist-message-topic {
    margin: 18px;
}
.kiwi-messagelist-message-whois {
    border-left-color: #939393;
}
.kiwi-messagelist-message--highlight {
    background: #e3f1d4;
    border-left-color: #80ab52;
}
.kiwi-messagelist-message--hover {
    background: #e3f1d4;
    border-left-color: #80ab52;
}
.kiwi-messagelist-message--info-open {
    background: #f6f6f6;
}

.kiwi-messagelist-message > div {
}

.kiwi-messagelist-time {
    color: #a5a5a5;
}


.kiwi-messagelist-message-repeat {
    border-top: none;
}
.kiwi-messagelist-message-repeat .kiwi-messagelist-nick,
.kiwi-messagelist-message-repeat .kiwi-messagelist-time {
    /* Set the opacity instead of making it invisible so that it's still selectable when copying text */
    opacity: 0;
    cursor: default;
}

.kiwi-messagelist-message:not(.kiwi-messagelist-message--unread) + .kiwi-messagelist-message--unread {
}
.kiwi-messagelist-message--unread {
    border-left-color: #d4e5f1;
}

.kiwi-messagelist-seperator:after {
    border-color: #ddd;
}
.kiwi-messagelist-seperator + .kiwi-messagelist-message {
    border-top: none;
}

.kiwi-messagelist-body .kiwi-nick {
}

/* Topic changes */
.kiwi-messagelist-message-topic {
    background: #FFF5AB;
    border: 1px solid #F3C572;
    border-radius: 5px;
}

.kiwi-messagelist-message-traffic-join {
    color: #009900;
}
.kiwi-messagelist-message-traffic-quit,
.kiwi-messagelist-message-traffic-part,
.kiwi-messagelist-message-traffic-kick {
    color: #900;
}
.kiwi-messagelist-message-traffic-quit .kiwi-nick:before,
.kiwi-messagelist-message-traffic-part .kiwi-nick:before, {
    color: #900;
    content: "← ";
}
.kiwi-messagelist-message-action .kiwi-messagelist-body {
    color: #009900;
}

/* MOTD */
.kiwi-messagelist-message-motd {
    color: #666;
}

/* Errors */
.kiwi-messagelist-message-error {
    background: #f1d4d4;
    border-left-color: #ab5252;
}

.kiwi-messagelist-message-connection-connected {
    color: #009900;
}
.kiwi-messagelist-message-connection-disconnected {
    color: #900;
}



/**
 * Message list
 */

.kiwi-messageinfo {
    background: #f6f6f6;
    border-bottom: 2px #dddddd solid;
    border-top: 1px #dddddd dashed;
}
.kiwi-messageinfo-urls {
    border-top: 1px solid #dddddd;
}



/**
 * Network settings
 */

.kiwi-networksettings-error {
    border: 1px dashed #d86f6f;
}
.kiwi-networksettings-danger h3 {
    background: #d86f6f;
}



/**
 * Alias settings
 */
.kiwi-settings-aliases-input {
    border-color: #cccccc;
}
.kiwi-settings-aliases-help {
    background: #f3f2f2;
    border: 1px dashed gray;
}
.kiwi-settings-aliases-help em {
    color: #ab1010;
    background: #fff6a5;
}



/**
 * User box
 */

.kiwi-userbox {
}
.kiwi-userbox-usermask {
    color: #9e9e9e;
}
.kiwi-userbox-whois {
    background: #ffffff;
    color: #2c3e50;
    border: 1px dashed #9e9e9e;
}
.kiwi-userbox-whois-line {
}
.kiwi-userbox-actions-op {
    border-top: 1px solid #9e9e9e;
}



/**
 * Self user box
 */
.kiwi-selfuser-actions {
    border-top: 1px solid #dddddd;
}
.kiwi-controlinput-selfuser {
    background: #f6f6f6;
    border: 1px solid #dddddd;
}



/**
 * Channel list
 */
.kiwi-channellist table tbody tr:nth-child(even) {
    background-color: #f9f9f9;
}
.kiwi-channellist table tbody tr {
    border-top: 1px solid lightgray;
}
.kiwi-channellist-users {
    width: 80px;
    background: #7dbd67;
    padding: 2px 0;
    border-radius: 3px;
    text-align: center;
}



/**
 * Welcome startup screen
 */

.kiwi-welcome-simple-start[disabled] {
    opacity: 0.65;
}
.kiwi-welcome-simple-error {
    border: 1px dashed #d86f6f;
}

